added getX controller

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   stacked_themes: 0.1.0
   lottie: ^1.2.2
   carousel_slider: ^4.0.0
+  get: ^4.6.1
 
 dev_dependencies:
   flutter_test:
